fix: update scrollbar and caret colors to use primary theme color

--- a/src/SkinCitizen/SkinCitizen.less
+++ b/src/SkinCitizen/SkinCitizen.less
@@ -58,8 +58,8 @@ body {
 
 /* 滚动条显示主题色 */
 * {
-	scrollbar-color: var(--color-progressive) transparent;
-	caret-color: var(--color-progressive);
+	scrollbar-color: var(@color--primary) transparent;
+	caret-color: var(@color--primary);
 }
 
 /* 页面内容宽度 */
